assert-struct/tests/snapshots/multiple_failures__nested_multiple_failures.snap
---
source: assert-struct/tests/multiple_failures.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/multiple_failures_errors/nested_multiple_failures.rs:30:18
   |
30 |             bio: "A detailed bio that is much longer",
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ got "Hello"
31 |             verified: true,
   |                       ^^^^ got false
32 |             followers: > 100,
   |                        ^^^^^ got 5
